--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>RPG Battle Arena</title>
+    <title>RPG Battle Arena 3D</title>
     <link rel="stylesheet" href="styles.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
 </head>
 <body>
     <div class="container">
@@ -56,8 +57,11 @@
                 <p id="waveInfo">Ola: <span id="wave">1</span> | Enemigos: <span id="enemyCount">0</span></p>
             </div>
 
-            <div class="battle-arena">
-                <!-- Jugador -->
+            <!-- Arena 3D -->
+            <div id="battleArena3D" class="battle-arena-3d"></div>
+
+            <!-- Panel de información (superpuesto sobre 3D) -->
+            <div class="battle-info-overlay">
                 <div class="character-section player-section">
                     <div class="character-display">
                         <div id="playerIcon" class="character-icon-large">⚔️</div>
@@ -146,6 +150,7 @@
         </div>
     </div>
 
+    <script src="three-setup.js"></script>
     <script src="game.js"></script>
 </body>
 </html>
