--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <title>RPG Battle Arena 3D</title>
     <link rel="stylesheet" href="styles.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
+    <script src="character-builder.js"></script>
+    <script src="animations.js"></script>
+    <script src="three-setup.js"></script>
+    <script src="game.js"></script>
 </head>
 <body>
     <div class="container">
